<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
        
    <TextView
        android:id="@+id/tour_skip" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/tour_skip"
        android:textColor="#fda204"
        android:padding="10dp"/>
    
    <ImageView 
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_takeatour"/>
    
    <TextView
        android:id="@+id/tourOne_chooseInterest" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tour_one_choose_interest"
        android:textColor="#333333"
        android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/tourOne_pickInterests"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/gray_font"
        android:text="@string/tour_one_pick_interest"
       
        />
    

</LinearLayout>
