<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_background"
    android:orientation="vertical"
    tools:context="com.attribes.incommon.WelcomeActivity$PlaceholderFragment" >

    <!-- android:background="@drawable/ab_solid_background" -->

    <Button
        android:id="@+id/welcome_createProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="startCreateProfile"
        android:text="@string/welcome_create_profile"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/welcome_welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_createProfileButton"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="#6D6D6D"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/welcome_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/welcome_welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/welcome_greeting"
        android:textAlignment="center"
        android:textColor="#343434"
        android:textSize="22sp" />

</RelativeLayout>