<ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matchProfile_scrollView"
    android:layout_width="match_parent"
    android:layout_height="510dp"
    android:animateLayoutChanges="true"
    
    tools:context="com.attribes.incommon.MatchProfile" 
    
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/createProfile_profilePic"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="0dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/name_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/createProfile_profilePic"
            android:background="#282828"
            android:gravity="center_vertical"
            android:weightSum="3" >

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.75"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.25"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/matchProfileInterest_isOnline"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:contentDescription="@string/match_profile_isOnline"
                android:visibility="visible"
                android:background="@drawable/green_circle" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_bar"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/chat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/match_profile_chat"
                android:src="@drawable/ic_chat" />

            <ImageView
                android:id="@+id/matchProfileInterest_like"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/chat"
                android:contentDescription="@string/match_profile_like"
                android:src="@drawable/ic_like" />

            <ImageView
                android:id="@+id/add_friend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/matchProfileInterest_like"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/match_profile_add"
                android:src="@drawable/ic_add_friend" />

            <ImageView
                android:id="@+id/info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/match_profile_info"
                android:src="@drawable/ic_info" />
        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/actions_layout"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/interest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="Interests Searched:"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/intersts_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/interest_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <!-- <TextView
                android:id="@+id/searched_intersts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/interest_bubble_shape_darker"
                android:gravity="center"
                android:layout_margin="5dp"
   			 	android:padding="8dp"
    			android:singleLine="true"
    			android:ellipsize="end"
    			android:textColor="@android:color/white"
    			android:textSize="14sp"
                /> -->
                <com.attribes.incommon.ExpandableHeightGridView
	                android:id="@+id/searched_intersts"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	               
	                android:layout_marginRight="10dp"
	                android:verticalSpacing="5dp"
	                android:horizontalSpacing="5dp"
	                android:layout_marginBottom="5dp"
	                android:numColumns="3" 
                />
            
            <!-- android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp" -->
                
            <TextView
                android:id="@+id/other_intersts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:text="Other Interests: " />
            <!-- 
            <com.attribes.incommon.ExpandableHeightGridView
                android:id="@+id/other_intersts_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:verticalSpacing="5dp"
                android:horizontalSpacing="5dp"
                android:layout_marginBottom="5dp"
                android:numColumns="3" 
                />
                 -->
                 
              <com.attribes.incommon.views.InterestLayout
		       android:id="@+id/matchProfile_otherInterestList"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_below="@+id/starMatch_interestMatched"
		       android:layout_marginTop="10dp"
		       
		       />
        </LinearLayout>

        <TextView
            android:id="@+id/profile_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/interest_text"
            android:layout_marginLeft="10dp"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>
